Fixed error with pipe : Added imageClass for width and height of imgs for list-employees.component.ts

--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -35,7 +35,7 @@
                 Date Of Birth
               </div>
               <div  class="col-xs-6">
-                :{{employee.dateOfBirth}}
+                :{{employee.dateOfBirth | date}}
               </div>
               <div class="row">
                 <div class="col-xs-6">
