--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -3,53 +3,55 @@
     <h3 class="panel-title">{{employee.name}}</h3>
   </div>
   <div class="panel-body">
-    <div class="col-xs-10">
-      <div class="row">
-        <div class="col-xs-4"><img [src]='employee.photoPath'></div>
-        <div class="col-xs-8">
+    <div class="col-md-10">
+      <div class="row vertical-align">
+        <div class="col-md-4">
+          <img class="imageClass" [src]='employee.photoPath'>
+        </div>
+        <div class="col-md-8">
           <div class="row">
-            <div class="col-xs-6">
+            <div class="col-md-6">
               Gender
             </div>
-            <div  class="col-xs-6">
+            <div class="col-md-6">
               :{{employee.gender}}
             </div>
           </div>
           <div class="row">
-            <div class="col-xs-6">
+            <div class="col-md-6">
               Name
             </div>
-            <div  class="col-xs-6">
+            <div class="col-md-6">
               :{{employee.name}}
             </div>
             <div class="row">
-              <div class="col-xs-6">
+              <div class="col-md-6">
                 Contact Preference
               </div>
-              <div  class="col-xs-6">
+              <div class="col-md-6">
                 :{{employee.contactPreference}}
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-6">
+              <div class="col-md-6">
                 Date Of Birth
               </div>
-              <div  class="col-xs-6">
+              <div class="col-md-6">
                 :{{employee.dateOfBirth | date}}
               </div>
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-md-6">
                   Department
                 </div>
-                <div  class="col-xs-6">
+                <div class="col-md-6">
                   :{{employee.department}}
                 </div>
               </div>
               <div class="row">
-                <div class="col-xs-6">
+                <div class="col-md-6">
                   Is Active
                 </div>
-                <div  class="col-xs-6">
+                <div class="col-md-6">
                   :{{employee.isActive ? 'Yes' : 'No'}}
                 </div>
               </div>
@@ -60,3 +62,4 @@
     </div>
   </div>
 </div>
+
