--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -8,10 +8,44 @@
         <label for="fullName">Full Name</label>
         <input id="fullName" type="text" class="form-control" name="fullName" [(ngModel)]="fullName" />
       </div>
+
       <div class="form-group">
         <label for="email">Email</label>
         <input id="email" type="email" class="form-control" name="em" [(ngModel)]="email" />
       </div>
+
+      <div class="form-group">
+        <label for="phoneNumber">Phone Number</label>
+        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="phoneNumber"/>
+      </div>
+
+      <div class="form-group">
+        <label>Contact Preference</label>
+        <div class="form-control">
+          <label class="radio-inline">
+            <input type="radio" name="contactPreference" value="email" [(ngModel)]="contactPreference"/>
+            Email
+          </label>
+          <label class="form-control">
+            <input type="radio" name="contactPreference" value="phoneNumber" [(ngModel)]="contactPreference"/>
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Gender</label>
+        <div class="form-control">
+          <label class="radio-inline">
+            <input name="gender" type="radio" value="male" [(ngModel)]="gender"/>
+            Male
+          </label>
+          <label class="radio-inline">
+            <input name="gender" type="radio" value="female" [(ngModel)]="gender"/>
+            Female
+          </label>
+        </div>
+      </div>
+
     </div>
     <div class="panel-footer">
       <button type="submit" class="btn btn-primary">Save</button>
