--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -46,6 +46,14 @@
         </div>
       </div>
 
+      <div class="form-group">
+        <div class-"form-control">
+          <label class="checkbox-inline">
+            <input type="checkbox" name="isActive" [(ngModel)]="isActive" > Is Active
+          </label>
+        </div>
+      </div>
+      
     </div>
     <div class="panel-footer">
       <button type="submit" class="btn btn-primary">Save</button>
