--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -3,57 +3,67 @@
     <div class="panel-heading">
       <h3 class="panel-title">Create Employee</h3>
     </div>
+    <!-- Full Name -->
     <div class="panel-body">
       <div class="form-group">
         <label for="fullName">Full Name</label>
         <input id="fullName" type="text" class="form-control" name="fullName" [(ngModel)]="fullName" />
       </div>
-
+      <!-- Email -->
       <div class="form-group">
         <label for="email">Email</label>
         <input id="email" type="email" class="form-control" name="em" [(ngModel)]="email" />
       </div>
-
+      <!-- Phone Number -->
       <div class="form-group">
         <label for="phoneNumber">Phone Number</label>
-        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="phoneNumber"/>
+        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="phoneNumber" />
       </div>
-
+      <!-- Contact Preference -->
       <div class="form-group">
         <label>Contact Preference</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input type="radio" name="contactPreference" value="email" [(ngModel)]="contactPreference"/>
-            Email
+            <input type="radio" name="contactPreference" value="email" [(ngModel)]="contactPreference" /> Email
           </label>
           <label class="form-control">
-            <input type="radio" name="contactPreference" value="phoneNumber" [(ngModel)]="contactPreference"/>
+            <input type="radio" name="contactPreference" value="phoneNumber" [(ngModel)]="contactPreference" />
           </label>
         </div>
       </div>
-
+      <!-- Gender Radio -->
       <div class="form-group">
         <label>Gender</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input name="gender" type="radio" value="male" [(ngModel)]="gender"/>
-            Male
+            <input name="gender" type="radio" value="male" [(ngModel)]="gender" /> Male
           </label>
           <label class="radio-inline">
-            <input name="gender" type="radio" value="female" [(ngModel)]="gender"/>
-            Female
+            <input name="gender" type="radio" value="female" [(ngModel)]="gender" /> Female
           </label>
         </div>
+      </div>
+      <!--Is Active Checkbox-->
+      <div class="form-group">
+        <div class- "form-control">
+          <label class="checkbox-inline">
+            <input type="checkbox" name="isActive" [(ngModel)]="isActive"> Is Active
+          </label>
+        </div>
+      </div>
+      <!-- Department Dropdown-->
+      <div class="form-group">
+        <label for="department" class="">
+          Department
+        </label>
+        <select class="form-control" id="department" name="department" [(ngModel)]="department">
+          <option value="1">Help Desk</option>
+          <option value="2">HR</option>
+          <option value="3">IT</option>
+          <option value="4">Payroll</option>
+        </select>
       </div>
 
-      <div class="form-group">
-        <div class-"form-control">
-          <label class="checkbox-inline">
-            <input type="checkbox" name="isActive" [(ngModel)]="isActive" > Is Active
-          </label>
-        </div>
-      </div>
-      
     </div>
     <div class="panel-footer">
       <button type="submit" class="btn btn-primary">Save</button>
