--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -62,6 +62,12 @@
           </option>
         </select>
       </div>
+      <!-- Date Of Birth-->
+      <div class="form-group">
+        <label for="dateOfBirth">Date Of Birth</label>
+        <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth"
+        type="text" bsDateRangepicker class="form-control" placeholder="dd/mm/yyyy"/>
+      </div>
 
     </div>
     <div class="panel-footer">
