--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -7,7 +7,7 @@
     <div class="panel-body">
       <div class="form-group">
         <label for="fullName">Full Name</label>
-        <input id="fullName" type="text" class="form-control" name="fullName" [(ngModel)]="fullName" />
+        <input required id="fullName" type="text" class="form-control" name="fullName" [(ngModel)]="fullName" />
       </div>
       <!-- Email -->
       <div class="form-group">
