--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -1,31 +1,31 @@
-<form #employeeForm="ngForm" (ngSubmit)="saveEmployeeForm(employeeForm)">
+<form #employeeForm="ngForm" (ngSubmit)="saveEmployeeForm(employee)">
   <div class="panel panel-primary">
     <div class="panel-heading">
       <h3 class="panel-title">Create Employee</h3>
     </div>
-    <!-- Full Name -->
+    <!--  Name -->
     <div class="panel-body">
-      <div class="form-group" [class.has-success]='fullNameControl.valid && fullNameControl.touched' [class.has-error]='fullNameControl.invalid && fullNameControl.touched'>
-        <label for="fullName" class="control-label">Full Name</label>
-        <input required id="fullName" type="text" class="form-control" name="fullName" [(ngModel)]="fullName" #fullNameControl="ngModel"/>
-        <span class="help-block" *ngIf="fullNameControl.invalid && fullNameControl.touched">
-          Full Name is Required
+      <div class="form-group" [class.has-success]='name.valid && name.touched' [class.has-error]='name.invalid && name.touched'>
+        <label for="name" class="control-label"> Name</label>
+        <input required id="name" type="text" class="form-control" name="name" [(ngModel)]="employee.name" #name="ngModel" />
+        <span class="help-block" *ngIf="name.invalid && name.touched">
+          Name is Required
         </span>
-        <span class="help-block" *ngIf="fullNameControl.valid && fullNameControl.touched">
-          Full Name is valid
+        <span class="help-block" *ngIf="name.valid && name.touched">
+          Name is valid
         </span>
       </div>
-      
+
       <!-- Email -->
       <div class="form-group">
         <label for="email">Email</label>
-        <input required id="email" type="email" class="form-control" name="em" [(ngModel)]="email" />
+        <input required id="email" type="email" class="form-control" name="em" [(ngModel)]="employee.email" />
       </div>
 
       <!-- Phone Number -->
       <div class="form-group">
         <label for="phoneNumber">Phone Number</label>
-        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="phoneNumber" />
+        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="employee.phoneNumber" />
       </div>
 
       <!-- Contact Preference -->
@@ -33,10 +33,10 @@
         <label>Contact Preference</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input type="radio" name="contactPreference" value="email" [(ngModel)]="contactPreference" /> Email
+            <input type="radio" name="contactPreference" value="email" [(ngModel)]="employee.contactPreference" /> Email
           </label>
           <label class="form-control">
-            <input type="radio" name="contactPreference" value="phoneNumber" [(ngModel)]="contactPreference" /> Phone Number
+            <input type="radio" name="contactPreference" value="phoneNumber" [(ngModel)]="employee.contactPreference" /> Phone Number
           </label>
         </div>
       </div>
@@ -46,10 +46,10 @@
         <label>Gender</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input name="gender" type="radio" value="male" [(ngModel)]="gender" /> Male
+            <input name="gender" type="radio" value="male" [(ngModel)]="employee.gender" /> Male
           </label>
           <label class="radio-inline">
-            <input name="gender" type="radio" value="female" [(ngModel)]="gender" /> Female
+            <input name="gender" type="radio" value="female" [(ngModel)]="employee.gender" /> Female
           </label>
         </div>
       </div>
@@ -58,7 +58,7 @@
       <div class="form-group">
         <div class- "form-control">
           <label class="checkbox-inline">
-            <input type="checkbox" name="isActive" [(ngModel)]="isActive"> Is Active
+            <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive"> Is Active
           </label>
         </div>
       </div>
@@ -68,7 +68,7 @@
         <label for="department" class="">
           Department
         </label>
-        <select class="form-control" id="department" name="department" [(ngModel)]="department">
+        <select class="form-control" id="department" name="department" [(ngModel)]="employee.department">
           <option *ngFor="let department of departments" [value]="department.id">
             {{ department.name }}
           </option>
@@ -79,14 +79,14 @@
         <!-- Date Of Birth-->
         <div class="form-group col-md-5">
           <label for="dateOfBirth">Date Of Birth</label>
-          <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="dateOfBirth" type="text" bsDatepicker [bsConfig]="datePickerConfig"
+          <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="employee.dateOfBirth" type="text" bsDatepicker [bsConfig]="datePickerConfig"
             class="form-control" placement="right" placeholder="dd/mm/yyyy" />
         </div>
 
         <!-- Photo Path -->
         <div class="form-group">
           <label for="photoPath">Photo Path</label>
-          <input id="photoPath" name="photoPath" [(ngModel)]="photoPath" type="text" class="form-control" />
+          <input id="photoPath" name="photoPath" [(ngModel)]="employee.photoPath" type="text" class="form-control" />
         </div>
 
         <div class="form-group">
@@ -96,7 +96,7 @@
         </div>
 
         <div class="form-group">
-          <img [src]="photoPath" height="200" width="200" *ngIf="previewPhoto" />
+          <img [src]="employee.photoPath" height="200" width="200" *ngIf="previewPhoto" />
         </div>
 
       </div>
@@ -109,3 +109,6 @@
 </form>
 
 Angular Generated Form Text: {{employeeForm.value | json}}
+<br />
+<br />
+Our Employee Model : {{ employee | json}}
