--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -35,36 +35,42 @@
       </div>
 
       <!-- Contact Preference -->
-      <div class="form-group">
-        <label>Contact Preference</label>
+      <div class="form-group" [class.has-error]='contactPreference.invalid && contactPreference.touched'>
+        <label class="control-label">Contact Preference</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input type="radio" name="contactPreference" value="email" [(ngModel)]="employee.contactPreference" /> Email
+            <input type="radio" required #contactPreference='ngModel' name="contactPreference" value="email" [(ngModel)]="employee.contactPreference" /> Email
           </label>
-          <label class="form-control">
-            <input type="radio" name="contactPreference" value="phoneNumber" [(ngModel)]="employee.contactPreference" /> Phone Number
+          <label class="radio-inline">
+            <input type="radio" required #contactPreference='ngModel' name="contactPreference" value="phoneNumber" [(ngModel)]="employee.contactPreference" /> Phone Number
           </label>
         </div>
+        <span class="help-block" *ngIf="contactPreference.invalid && contactPreference.touched">
+          Contact Preference is required
+        </span>
       </div>
 
       <!-- Gender Radio -->
-      <div class="form-group">
-        <label>Gender</label>
+      <div class="form-group" [class.has-error]='gender.invalid && gender.touched'>
+        <label class="control-label">Gender</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input name="gender" type="radio" value="male" [(ngModel)]="employee.gender" /> Male
+            <input required #gender='ngModel' name="gender" type="radio" value="male" [(ngModel)]="employee.gender" /> Male
           </label>
           <label class="radio-inline">
-            <input name="gender" type="radio" value="female" [(ngModel)]="employee.gender" /> Female
+            <input required #gender='ngModel' name="gender" type="radio" value="female" [(ngModel)]="employee.gender" /> Female
           </label>
         </div>
+        <span class="help-block" *ngIf='gender.touched && gender.invalid'>
+          Gender is required
+        </span>
       </div>
 
       <!--Is Active Checkbox-->
       <div class="form-group">
-        <div class- "form-control">
+        <div class="form-control">
           <label class="checkbox-inline">
-            <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive"> Is Active
+            <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive"/> Is Active
           </label>
         </div>
       </div>
@@ -108,13 +114,12 @@
       </div>
 
     </div>
-
     <div class="panel-footer">
-      <button type="submit" [disabled]='employeeForm.invalid' class="btn btn-primary">Save</button>
+      <button type="submit" [disabled]="employeeForm.invalid" class="btn btn-primary">Save</button>
     </div>
 </form>
 
-Angular Generated Form Text: {{employeeForm.value | json}}
+Angular Generated Form Text : {{employeeForm.value | json}}
 <br />
 <br />
 Our Employee Model : {{ employee | json}}
