--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -74,12 +74,15 @@
       </div>
 
       <!--Is Active Checkbox-->
-      <div class="form-group">
+      <div class="form-group" [class.has-error]='isActive.touched && isActive.invalid'>
         <div class="form-control">
-          <label class="checkbox-inline">
-            <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive" /> Is Active
+          <label class="checkbox-inline control-label">
+            <input type="checkbox" [required]='employee.isActive == null' #isAction='ngModel' name="isActive" [(ngModel)]="employee.isActive" /> Is Active
           </label>
         </div>
+        <span class="help-block" *ngIf='isActive.touched && isActive.errors?.required'>
+          Is Active is required
+        </span>
       </div>
 
       <!-- Department Dropdown-->
