--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -124,7 +124,24 @@
         <div class="form-group">
           <img [src]="employee.photoPath" height="200" width="200" *ngIf="previewPhoto" />
         </div>
+      </div>
 
+      <div class="form-group" [class.has-error]='password.touched && password.invalid'>
+        <label for="password" class="control-label">Password</label>
+        <input name="password" required type="text" class="form-control"
+        [(ngModel)]='employee.password' #password='ngModel'/>
+        <span class="help-block" *ngIf='password.touched && password.errors?.required'>
+          Password is required
+        </span>
+      </div>
+
+      <div class="form-group" [class.has-error]='confirmPassword.touched && confirmPassword.invalid'>
+        <label for="confirmPassword" class="control-label">Confirm Password</label>
+        <input name="confirmPassword" appConfirmEqualValidator required type="text" class="form-control" [(ngModel)]='employee.confirmPassword' 
+        #confirmPassword='ngModel'>
+        <span class="help-block" *ngIf='confirmPassword.touched && confirmPassword.errors?.required'>
+          Confirm Password is Required
+        </span>
       </div>
 
     </div>
@@ -135,4 +152,5 @@
 
 Angular Generated Form Text : {{employeeForm.value | json}}
 <br />
-<br /> Our Employee Model : {{ employee | json}}
+<br /> 
+Our Employee Model : {{ employee | json}}
