--- a/src/app/employees/create-employee.component.html
+++ b/src/app/employees/create-employee.component.html
@@ -77,7 +77,8 @@
       <div class="form-group" [class.has-error]='isActive.touched && isActive.invalid'>
         <div class="form-control">
           <label class="checkbox-inline control-label">
-            <input type="checkbox" [required]='employee.isActive == null' #isAction='ngModel' name="isActive" [(ngModel)]="employee.isActive" /> Is Active
+            <input type="checkbox" [required]='employee.isActive == null' #isAction='ngModel' name="isActive" [(ngModel)]="employee.isActive"
+            /> Is Active
           </label>
         </div>
         <span class="help-block" *ngIf='isActive.touched && isActive.errors?.required'>
@@ -126,25 +127,29 @@
         </div>
       </div>
 
-      <div class="form-group" [class.has-error]='password.touched && password.invalid'>
-        <label for="password" class="control-label">Password</label>
-        <input name="password" required type="text" class="form-control"
-        [(ngModel)]='employee.password' #password='ngModel'/>
-        <span class="help-block" *ngIf='password.touched && password.errors?.required'>
-          Password is required
-        </span>
-      </div>
+      <div ngModelGroup='passwordGroup' [class.has-error]='confirmPassword.touched && 
+      confirmPassword.invalid && !confirmPassword.errors?.required'>
+        <div class="form-group" [class.has-error]='password.touched && password.invalid'>
+          <label for="password" class="control-label">Password</label>
+          <input (input)='password.control.updateValueAndValidity()' name="password" required type="text" class="form-control" [(ngModel)]='employee.password'
+            #password='ngModel' />
+          <span class="help-block" *ngIf='password.touched && password.errors?.required'>
+            Password is required
+          </span>
+        </div>
 
-      <div class="form-group" [class.has-error]='confirmPassword.touched && confirmPassword.invalid'>
-        <label for="confirmPassword" class="control-label">Confirm Password</label>
-        <input name="confirmPassword" appConfirmEqualValidator="password" required type="text" class="form-control" [(ngModel)]='employee.confirmPassword' 
-        #confirmPassword='ngModel'>
-        <span class="help-block" *ngIf='confirmPassword.touched && confirmPassword.errors?.required'>
-          Confirm Password is Required
-        </span>
-        <span class="help-block" *ngIf='confirmPassword.touched && confirmPassword.errors?.notEqual'>
-          Password and Confirm password does not match
-        </span>
+        <div class="form-group" [class.has-error]='confirmPassword.touched && confirmPassword.invalid'>
+          <label for="confirmPassword" class="control-label">Confirm Password</label>
+          <input name="confirmPassword" appConfirmEqualValidator="password" required type="text" class="form-control" [(ngModel)]='employee.confirmPassword'
+            #confirmPassword='ngModel'>
+          <span class="help-block" *ngIf='confirmPassword.touched && confirmPassword.errors?.required'>
+            Confirm Password is Required
+          </span>
+          <span class="help-block" *ngIf='confirmPassword.touched && 
+        confirmPassword.errors?.notEqual && !confirmPassword.errors?.required'>
+            Password and Confirm password does not match
+          </span>
+        </div>
       </div>
 
     </div>
@@ -153,7 +158,6 @@
     </div>
 </form>
 
-Angular Generated Form Text : {{employeeForm.value | json}}
+Angular Generated Form Text : {{ employeeForm.value | json }}
 <br />
-<br /> 
-Our Employee Model : {{ employee | json}}
+<br /> Our Employee Model : {{ employee | json }}
