--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -2,12 +2,14 @@
   <app-display-employee [employee]='employee'></app-display-employee>
 </div> -->
 
-<h1 *ngIf='dataFromChild'>
-  {{ dataFromChild?.name + dataFromChild?.gender }}
+<h1 #h1Var>
+
 </h1>
 <button (click)='nextEmployee()' class="btn btn-primary">
   View Next Employee
 </button>
 <br />
 <br />
-<app-display-employee (notify)='handleNotify($event)' [employeeId]='employeeToDisplay.id' [employee]='employeeToDisplay'></app-display-employee>
+<div (click)=' #h1Var.innerHTML = childComponent.getEmployeeNameAndGender()'>
+  <app-display-employee #childComponent (notify)='handleNotify($event)' [employeeId]='employeeToDisplay.id' [employee]='employeeToDisplay'></app-display-employee>
+</div>
