--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -1,15 +1,5 @@
-<!-- <div *ngFor="let employee of employees">
-  <app-display-employee [employee]='employee'></app-display-employee>
-</div> -->
-
-<h1 #h1Var>
-
-</h1>
-<button (click)='nextEmployee()' class="btn btn-primary">
-  View Next Employee
-</button>
-<br />
-<br />
-<div (click)='#h1Var.innerHTML = childComponent.getEmployeeNameAndGender()'>
-  <app-display-employee #childComponent (notify)='handleNotify($event)' [employeeId]='employeeToDisplay.id' [employee]='employeeToDisplay'></app-display-employee>
+<div *ngFor='let employee of employees'>
+  <div (click)='onClick(employee.id)' class="pointerCursor">
+    <app-display-employee [employee]='employee' #childComponent></app-display-employee>
+  </div>
 </div>
