--- a/src/app/employees/employee-details.component.html
+++ b/src/app/employees/employee-details.component.html
@@ -68,5 +68,8 @@
     </div>
     <div class="panel-footer">
       <a routerLink='/list' class="btn btn-primary">Back to List</a>
+      <button class="btn btn-primary pull-right" (click)='ViewNextEmployee()'>
+        View Employee
+      </button>
     </div>
   </div>
